Fix wrong position value breaking layout

--- a/main.user.css
+++ b/main.user.css
@@ -26,7 +26,7 @@
       background: rgba(0, 0, 0, 0.8)
 
     .combined-view 
-      position: none
+      position: initial
       .detail-container 
         width: 100% !important
         flex: 1 1 auto
@@ -36,6 +36,7 @@
       max-width: 800px !important
       bottom: 10%
       max-height: 80vh
+  
       flip-page 
         height: 100%
 
